2010-02-24 Borut Razem <borut.razem AT siol.net>

	* packages/build.mingw32/Makefilei: updated to gcc 4.4.3
	  binutils 2.20, migwrt 3.16, w32api 3.14

2010-02-07 Borut Razem <borut.razem AT siol.net>

	* packages/build.nsis/Makefile: updated to NSIS 2.46

2009-10-14 Borut Razem <borut.razem AT siol.net>

	* bin/rcf.sh: introduced bandwidth limit (--bwlimit) option for rsync
	* .sdcc_builder/profile: changed perl version from 5.8.8 to 5.10.0
	* crontab.txt: dont' ecplicitely define DCFHOST ip host name
	* packages/build.mingw32/Makefile: updated to gcc 4.4.1,
	  binutils 2.19.1, migwrt 3.16
	* packages/build.gmp_mpfr/Makefile: updated to gmp 4.2.4, mpfr 2.3.2
	* packages/build.nsis/Makefile: updated to NSIS 2.45

2009-04-27 Borut Razem <borut.razem AT siol.net>

	* packages/build.mingw32/Makefilei: updated to gcc 4.4.0
	* packages/build.nsis/Makefile: updated to NSIS version 2.44

2009-03-13 Borut Razem <borut.razem AT siol.net>

	* packages/build.gputils/Makefile: upgraded to gputils-0.13.7

2009-02-08 Borut Razem <borut.razem AT siol.net>

	* packages/build.mingw32/Makefile: updated to gcc-4.3.3

2009-01-20 Borut Razem <borut.razem AT siol.net>

	* packages/build.nsis/Makefile: updated to NSIS version 2.42

2008-12-23 Borut Razem <borut.razem AT siol.net>

	* .sdcc_builder/profile: added LD_LIBRARY_PATH
	* bin/dcf.sh: logging enhancements
	* packages/build.gmp_mpfr: added
	* packages/build.mingw32/Makefile: updated to gcc-4.3.2

2008-12-18 Borut Razem <borut.razem AT siol.net>

	* crontab.txt take defaults for DCF
	* packages/build.mingw32/Makefile:
	  updated to binutils-2.19, mingwrt-3.1-mingw32 and w32api-3.13-mingw32

2008-12-14 Borut Razem <borut.razem AT siol.net>

	* .sdcc_builder/profile: defined PERL5LIB
	* bin/dcf.sh: test if can't cd
	* crontab.txt, etc/dcf_list: added cf-x86 to DCF

2008-12-13 Borut Razem <borut.razem AT siol.net>

	* packages/build.libtool/*: added

2008-12-12 Borut Razem <borut.razem AT siol.net>

	* etc/*, .sdcc_builder/*: added
